--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<app-nav-accordian></app-nav-accordian>
-<router-outlet></router-outlet>
-
+<div class="row">
+    <div class="col-md-3">
+        <app-nav-accordian></app-nav-accordian>
+    </div>
+    <div class="col-md-9">
+        <router-outlet></router-outlet>
+    </div>
+</div>
