--- a/src/app/nav-accordian/nav-accordian.component.html
+++ b/src/app/nav-accordian/nav-accordian.component.html
@@ -4,36 +4,36 @@
 
       <div id="accordion" class="panel-group">
 
-        <div class="panel panel-primary">
+        <!-- <div class="panel panel-primary">
 
           <div class="panel panel-heading">
             <h4 class="panel-title">
-              <a href="#PanelBodyOne" data-toggle="collapse" data-parent="#accordion" (click)="click('PanelBodyOne')" >Games</a>
+              <a href="#PanelBodyOne" data-toggle="collapse" data-parent="#accordion" (click)="click('PanelBodyOne')" >Profile</a>
             </h4>
           </div>
 
           <div id="PanelBodyOne" class="panel-collapse">
             <div class="panel-body">
               <ul>
-                <li>Mastermind</li>
-                <li>Some game</li>
+                <li>Preferences</li>
+                <li>Save Options</li>
               </ul>
             </div>
           </div>
 
-        </div>
+        </div> -->
         <div class="panel panel-primary">
 
           <div class="panel-heading">
             <h4 class="panel-title">
-              <a href="#PanelBodyTwo" data-toggle="collapse" data-parent="#accordion" (click)="click('PanelBodyTwo')">Profile</a>
+              <a href="#PanelBodyTwo" data-toggle="collapse" data-parent="#accordion" (click)="click('PanelBodyTwo')">Games</a>
             </h4>
           </div>
 
           <div id="PanelBodyTwo" class="panel-collapse">
             <div class="panel-body">
               <ul>
-                <li><a routerLink="/games/mastermind" routerLinkActive="active">Mastermind</a></li>
+                <li><a routerLink="/games/decoder" routerLinkActive="active">Decoder</a></li>
                 <li><a routerLink="/games/jigsaw" >Jigsaw</a></li>
               </ul>
             </div>
