--- a/src/app/games/decoder/decoder.component.html
+++ b/src/app/games/decoder/decoder.component.html
@@ -10,10 +10,11 @@
         </div>
         <br/>
         <br/>
-        <div class=" fa fa-hand-o-right">
+        <div class="fa fa-hand-o-right">
             <span *ngFor="let item of target">
                 <span>
-                    <img src={{item.filePath}} id={{item.id}} class="dropbox" draggable="false" (click)="targetImageClicked(item.id)" (onDrop)="onDrop($event)" (ondragover)="onDragOver($event)">
+                    <img src={{item.filePath}} id={{item.id}} class="dropbox" draggable="false" (click)="targetImageClicked(item.id)" (onDrop)="onDrop($event)"
+                        (ondragover)="onDragOver($event)">
                 </span>
             </span>
             <button class="btn-primary dropbox" [disabled]="guessComplete()" (click)="checkGuess($event)">
@@ -44,7 +45,7 @@
         <div>
             <span *ngFor="let item of iconSets">
                 <label>
-                    <input type="radio" value="{{item.value}}" name="iconset">
+                    <input type="radio" value="{{item.value}}" [checked]="item.value==iconSetDirectory" (change)="changeIconSet(item)" name="iconset">
                     <img src="{{item.filePath}}">
                 </label>
             </span>
@@ -56,7 +57,7 @@
         </button>
     </div>
     <div class="col-lg-4">
-        <div *ngIf="showPrevGuesses()"class="table table-striped">
+        <div *ngIf="showPrevGuesses()" class="table table-striped">
             <thead>
                 <th colspan="4">
                     <span class="fa fa-bars"></span>
