basic working canvas

--- a/src/app/games/jigsaw/jigsaw.component.html
+++ b/src/app/games/jigsaw/jigsaw.component.html
@@ -1,2 +1,2 @@
 <h1>jigsaw</h1>
-<div><img src="assets/images/redspot.png" draggable="true"></div>
+<canvas #layout class="jigsaw-canvas" width="350" height="350"></canvas>
